# android_wgpu_test

./: Cargo.toml  README.md
src/: lib.rs  main.rs  shader.wgsl
